Add mobile version

--- a/home_page1.html
+++ b/home_page1.html
@@ -60,14 +60,14 @@
         </div>
         <div class="rooms-cards">
             <div class="rooms-cards_main">
-                <img class="rooms-cards_main-img" src="img/living_room.png">
+                <img class="rooms-cards_img" src="img/living_room.png">
             </div>
             <div class="rooms-cards_sub">
                 <div class="rooms-cards_sub-item1">
-                    <img class="rooms-cards_sub-img1" src="img/bedroom.png">
+                    <img class="rooms-cards_img" src="img/bedroom.png">
                 </div>
                 <div class="rooms-cards_sub-item2">
-                    <img class="rooms-cards_sub-img2" src="img/kitchen.png">
+                    <img class="rooms-cards_img" src="img/kitchen.png">
                 </div>
             </div>
         </div>
@@ -271,7 +271,7 @@
             </div>
         </div>
         <div class="newsletter">
-            <img src="img/newsletter.png">
+            <img class="newsletter_img" src="img/newsletter.png">
             <div class="newsletter_block">
                 <div class="newsletter_text">
                     <div class="newsletter_header">
