--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,5 +20,5 @@
 </head>
 <body class="margin-zero">
   <div id="root"></div>
-  <script type="text/javascript" src="../dist/bundle.js"></script>
+  <script type="text/javascript" src="../build/bundle.js"></script>
 </body>
